cleaned up repo

--- a/results.ipynb
+++ b/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "bd08f4c6-5fe2-4f58-a1fb-f0d9d94f839d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "4e95cf8b-906c-4229-824b-bd32a725cbe3",
    "metadata": {},
    "outputs": [
@@ -242,13 +242,13 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/scores_analysis.csv').iloc[:,1:].drop('all comments',axis=1)\n",
+    "df = pd.read_csv('data/scores_analysis.csv').iloc[:,1:].drop('all comments',axis=1)\n",
     "df = df.rename(columns={'Score Differential': 'Final Score Differential'})\n",
     "df = df.rename(columns={'spread_clean': 'Ex-ante Spread'})\n",
     "df = df.rename(columns={'num_switches': 'Number of Switches'})\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "3f380b02-5dc5-4b8e-b56d-328981f2106a",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "342b1139-1576-430a-a62e-665511fe8827",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "311d4c84-299d-488a-990e-e277c5c3a324",
    "metadata": {},
    "outputs": [
@@ -520,20 +520,20 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lists = [eval(x) if type(x) == str else x for x in list(pd.read_csv('../AI/progress.csv')['lists'])]\n",
+    "lists = [eval(x) if type(x) == str else x for x in list(pd.read_csv('AI/progress.csv')['lists'])]\n",
     "df['sentiment_scores'] = lists\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "f0495573-9224-4bc2-94d3-d75327ad2887",
    "metadata": {},
    "outputs": [],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "fc34fc8b-043e-4802-afcd-40a152efe139",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "85729de7-9723-4ffc-891a-5dab1e217edc",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "d92635f5-1a2a-4a5d-96c4-312e9eae96d0",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "23ddbb47-4d61-48b1-92cf-2b77527b7ae2",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "121b0024-e884-4632-873b-44a888d13001",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "4f215b6e-4018-426d-bcf2-e1a412bd4771",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "07658f29-7fef-4c02-80d5-37e32692d656",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "41c3d022-162a-4bc8-b3a0-e298787a1166",
    "metadata": {},
    "outputs": [],
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "69910b6a-52d4-42ed-af8e-8e2184617cef",
    "metadata": {},
    "outputs": [],
@@ -1182,12 +1182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "48a04165-2b95-4657-82a5-51a9100b5784",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2 = pd.read_csv('../data/scores_analysis.csv').iloc[:,1:].drop('all comments',axis=1)\n",
+    "df_2 = pd.read_csv('data/scores_analysis.csv').iloc[:,1:].drop('all comments',axis=1)\n",
     "df_2 = df_2.rename(columns={'Score Differential': 'Final Score Differential'})\n",
     "eval_lst = ['Game thread scraped', 'Post game thread Scraped',\n",
     "       'Subscribers (in thousands)', 'sentiment_scores',\n",
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "4e0ba285-e54d-4a74-9249-de8ea3714f1c",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "6e8df9d7-d910-4e3c-babf-15b48bab6e5a",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "03ff8b1c-ee43-4ab8-9925-721db308c8e2",
    "metadata": {},
    "outputs": [],
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "e3a1b76c-c240-47e9-8e93-c51a9011d040",
    "metadata": {},
    "outputs": [],
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "bee90a41-44c7-4ab1-8d37-b445fa62a7b5",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1395,7 @@
        "MannwhitneyuResult(statistic=368.0, pvalue=0.31332466997401065)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "f4e2520f-513d-4df7-b0b6-b56bbdbbc2f6",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1448,7 @@
        "MannwhitneyuResult(statistic=521.0, pvalue=0.19485573748353424)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "be44663d-fba4-4886-84d6-da731c8c70af",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
        "MannwhitneyuResult(statistic=352.0, pvalue=0.005521102070446182)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "b556851b-0da0-4296-902b-c6a9913e81c2",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1553,7 @@
        "MannwhitneyuResult(statistic=695.0, pvalue=0.2579144543267142)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "id": "360d12f2-660d-48d9-937a-2d4d82efb841",
    "metadata": {},
    "outputs": [],
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "1093d428-b910-4186-a52f-6b1453ad982f",
    "metadata": {},
    "outputs": [],
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "072cedec-4b0f-476d-a118-1074c8b84df1",
    "metadata": {},
    "outputs": [
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "id": "266bb386-457e-4398-af92-2d4537599a1f",
    "metadata": {},
    "outputs": [],
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "6fe120f4-3fa3-4f53-bc63-a09c2bec1af1",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1761,7 @@
        "MannwhitneyuResult(statistic=128.0, pvalue=0.3261094520204889)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "f06563a9-ef5e-425d-8299-55ad3b42acf5",
    "metadata": {},
    "outputs": [
@@ -1807,7 +1807,7 @@
        "MannwhitneyuResult(statistic=169.0, pvalue=0.00558214360906498)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "id": "abff29ea-c6a1-4fc1-8c36-dac033b062b1",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1853,7 @@
        "MannwhitneyuResult(statistic=278.0, pvalue=0.0007881081620977142)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 32,
    "id": "bd193a09-9785-461c-acd5-79833a4e3212",
    "metadata": {},
    "outputs": [
@@ -1899,7 +1899,7 @@
        "MannwhitneyuResult(statistic=259.0, pvalue=0.005529419631421858)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "id": "4c23fca5-7209-4382-a4fb-ef868497b1fe",
    "metadata": {},
    "outputs": [],
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "id": "6452fbdb-784a-473e-b5f9-65d14bf10ec7",
    "metadata": {},
    "outputs": [],
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "id": "55a99011-6d0b-4b3a-a91a-b769c80af6db",
    "metadata": {},
    "outputs": [
@@ -1963,8 +1963,8 @@
      "output_type": "stream",
      "text": [
       "95% Confidence Interval for the Mean of dog_arr:\n",
-      "Lower Bound: 0.01091332145944188\n",
-      "Upper Bound: 0.09878872361981696\n"
+      "Lower Bound: 0.009947874916204169\n",
+      "Upper Bound: 0.09714241707892116\n"
      ]
     }
    ],
@@ -2015,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "id": "f8ef8fb4-41db-4ff0-a4a4-81f63548a24e",
    "metadata": {},
    "outputs": [],
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "id": "c4f2ee49-2b6c-4f9f-a078-2a61f99794cc",
    "metadata": {},
    "outputs": [],
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "id": "52be4c68-d255-4bf4-a1c4-2a57ca1980d1",
    "metadata": {},
    "outputs": [
@@ -2052,8 +2052,8 @@
      "output_type": "stream",
      "text": [
       "95% Confidence Interval for the Mean of fav_arr:\n",
-      "Lower Bound: 0.015588860329230679\n",
-      "Upper Bound: 0.09801119013020959\n"
+      "Lower Bound: 0.012922284840760294\n",
+      "Upper Bound: 0.0998066891659039\n"
      ]
     }
    ],
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "id": "cdb66139-48ff-4091-a43d-15eb96f8643b",
    "metadata": {},
    "outputs": [],
@@ -2098,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "id": "579b6d15-5029-4096-9f20-fdad428be06f",
    "metadata": {},
    "outputs": [],
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "id": "21f0f093-151d-4160-b77a-24b081c15c70",
    "metadata": {},
    "outputs": [],
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "id": "1a6e7155-82e6-4802-9803-5e3a01cc6836",
    "metadata": {},
    "outputs": [],
@@ -2179,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "id": "36efb848-be60-4f11-b317-093477037fe7",
    "metadata": {},
    "outputs": [
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "id": "a5ed0f74-eb79-484b-afb9-db5eb8dd567c",
    "metadata": {},
    "outputs": [
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "id": "4c80a063-2ab3-41a6-ae62-e2e6ced1169c",
    "metadata": {},
    "outputs": [
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "id": "0abca3d0-da2e-4ee0-999d-72ae9ac8e706",
    "metadata": {},
    "outputs": [
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 47,
    "id": "44e70a1e-a983-4ad6-b28f-7a799bf4a5df",
    "metadata": {},
    "outputs": [],
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 48,
    "id": "e9bcda38-3a41-4682-9c83-cf5a7a0c6642",
    "metadata": {},
    "outputs": [],
@@ -2379,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "id": "4bff581c-4063-4b50-a93f-4fd0213f2641",
    "metadata": {},
    "outputs": [
@@ -2453,7 +2453,7 @@
        "4     -41                 NaN          0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "id": "cd7f24e8-1513-4e87-8674-41af4d1bd1d1",
    "metadata": {},
    "outputs": [
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "id": "c13eeaa5-3f10-4470-8e6c-d49ae49fb3ea",
    "metadata": {},
    "outputs": [],
@@ -2544,7 +2544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "id": "a22e0b77-e7de-4826-aaf1-084644629621",
    "metadata": {},
    "outputs": [],
@@ -2573,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 53,
    "id": "2a5b4046-78e5-40af-8b61-2407135487f2",
    "metadata": {},
    "outputs": [
@@ -2641,7 +2641,7 @@
        "4     -41                 NaN"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2686,7 +2686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 54,
    "id": "63190225-13cd-4be4-8c53-0f46108b4f7b",
    "metadata": {},
    "outputs": [
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 55,
    "id": "a2df8fa0-7d44-4456-a597-f593e16812f9",
    "metadata": {},
    "outputs": [],
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 56,
    "id": "1ed9baeb-e2cd-4c03-bca6-4747e652331d",
    "metadata": {},
    "outputs": [],
@@ -2753,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "id": "67af87a0-eedc-47b7-9406-f4d95ee3f1bd",
    "metadata": {},
    "outputs": [],
@@ -2798,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 58,
    "id": "772003bb-56c7-4196-8e96-2bcb999811dc",
    "metadata": {},
    "outputs": [],
@@ -2809,7 +2809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "id": "64277bf5-bf41-49e5-85ab-732fd4878b6b",
    "metadata": {},
    "outputs": [],
@@ -2821,7 +2821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "id": "45bc7111-ede3-4fdf-b2bb-c62d1f786d87",
    "metadata": {},
    "outputs": [],
@@ -2833,7 +2833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 61,
    "id": "1dd5f95d-66d5-434f-912d-05bcd123a75f",
    "metadata": {},
    "outputs": [],
@@ -2844,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 62,
    "id": "b56f8428-a3aa-454a-a2fd-a0b0d9cf8515",
    "metadata": {},
    "outputs": [
@@ -2897,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 63,
    "id": "b9a9d075-9be4-447d-ac5d-3602c92a4cba",
    "metadata": {},
    "outputs": [
@@ -2965,7 +2965,7 @@
        "4       4            0.026071"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3016,7 +3016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 64,
    "id": "036d0fca-40d9-4042-b8da-7bb9559a2ddd",
    "metadata": {},
    "outputs": [
@@ -3035,7 +3035,7 @@
        "MannwhitneyuResult(statistic=756.0, pvalue=0.39232492097053195)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3061,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 65,
    "id": "2bab6145-b651-4484-a539-294de8115310",
    "metadata": {},
    "outputs": [
@@ -3083,7 +3083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "id": "9ec514f5-863a-4bef-a0fe-e0b5861d164c",
    "metadata": {},
    "outputs": [],
@@ -3134,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 67,
    "id": "c331bb34-5bf7-4b11-9287-c3498802217c",
    "metadata": {},
    "outputs": [
@@ -3157,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 68,
    "id": "de3423e3-aa38-4a70-ac4c-367c3ae5a965",
    "metadata": {},
    "outputs": [],
