--- a/results.ipynb
+++ b/results.ipynb
@@ -1080,6 +1080,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f2483b03-35e8-43a1-9a53-ab9b332ce511",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number of Comments by Fans of the Underdog Team</th>\n",
+       "      <th>Number of Comments by Fans of the Favorite Team</th>\n",
+       "      <th>Number of Total Comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1567.000000</td>\n",
+       "      <td>1567.000000</td>\n",
+       "      <td>1567.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>119.335035</td>\n",
+       "      <td>165.596043</td>\n",
+       "      <td>531.396937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>75.773395</td>\n",
+       "      <td>88.887617</td>\n",
+       "      <td>78.880550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>97.500000</td>\n",
+       "      <td>491.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>105.000000</td>\n",
+       "      <td>158.000000</td>\n",
+       "      <td>546.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>165.000000</td>\n",
+       "      <td>228.000000</td>\n",
+       "      <td>586.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>417.000000</td>\n",
+       "      <td>408.000000</td>\n",
+       "      <td>745.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Number of Comments by Fans of the Underdog Team  \\\n",
+       "count                                      1567.000000   \n",
+       "mean                                        119.335035   \n",
+       "std                                          75.773395   \n",
+       "min                                           0.000000   \n",
+       "25%                                          62.000000   \n",
+       "50%                                         105.000000   \n",
+       "75%                                         165.000000   \n",
+       "max                                         417.000000   \n",
+       "\n",
+       "       Number of Comments by Fans of the Favorite Team  \\\n",
+       "count                                      1567.000000   \n",
+       "mean                                        165.596043   \n",
+       "std                                          88.887617   \n",
+       "min                                           0.000000   \n",
+       "25%                                          97.500000   \n",
+       "50%                                         158.000000   \n",
+       "75%                                         228.000000   \n",
+       "max                                         408.000000   \n",
+       "\n",
+       "       Number of Total Comments  \n",
+       "count               1567.000000  \n",
+       "mean                 531.396937  \n",
+       "std                   78.880550  \n",
+       "min                   84.000000  \n",
+       "25%                  491.000000  \n",
+       "50%                  546.000000  \n",
+       "75%                  586.000000  \n",
+       "max                  745.000000  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_3 = df.rename(columns={'num_underdog_comments': 'Number of Comments by Fans of the Underdog Team',\n",
+    "                  'num_favorite_comments': 'Number of Comments by Fans of the Favorite Team'})\n",
+    "df_3['Number of Total Comments'] = df_3['all_comments'].apply(len)\n",
+    "df_3[['Number of Comments by Fans of the Underdog Team','Number of Comments by Fans of the Favorite Team',\n",
+    "     'Number of Total Comments']].describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3bc591a1-6803-447a-84d6-a5125a54fefb",
    "metadata": {},
